--- a/cnn_breed.ipynb
+++ b/cnn_breed.ipynb
@@ -6,8 +6,7 @@
       "name": "start.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/jjone36/Colab/blob/master/cnn_dog_breed.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "metadata": {
         "colab_type": "text",
@@ -80,6 +69,7 @@
       "metadata": {
         "id": "s-rousExJyiY",
         "colab_type": "code",
+        "outputId": "7bb6fcac-9868-4509-bb3b-c391876efd47",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -97,23 +87,22 @@
           },
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "0b4df9e5-42f0-42fd-ebb4-16d1f1f6f9c0"
+        }
       },
       "cell_type": "code",
       "source": [
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-b4c442f2-6955-4dec-8a2b-626710d9ed2e\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-b4c442f2-6955-4dec-8a2b-626710d9ed2e\">\n",
+              "     <input type=\"file\" id=\"files-8ba6d670-39dc-4e38-9cae-f4eaad70c815\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-8ba6d670-39dc-4e38-9cae-f4eaad70c815\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -140,22 +129,22 @@
       "metadata": {
         "id": "nxrloZS13YaE",
         "colab_type": "code",
+        "outputId": "aceb41c2-3e75-4dfb-8dd4-f48c3cb3be77",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "630767b9-68c5-464d-9ffc-4bc34daf0566"
+        }
       },
       "cell_type": "code",
       "source": [
         "ls -lha kaggle.json"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "-rw-r--r-- 1 root root 63 Jan 24 05:28 kaggle.json\n"
+            "-rw-r--r-- 1 root root 63 Jan 24 05:38 kaggle.json\n"
           ],
           "name": "stdout"
         }
@@ -170,7 +159,7 @@
       "cell_type": "code",
       "source": [
         "from getpass import getpass\n",
-        "user = 'jjone'\n",
+        "user = 'jjone36'\n",
         "key = 'cf8dcde20a60798fe4fb91b2ba5158e8'\n",
         "\n",
         "if '.kaggle' not in os.listdir('/root'):\n",
@@ -188,22 +177,81 @@
       "metadata": {
         "id": "Z-xsh8BA3YO7",
         "colab_type": "code",
+        "outputId": "bd163ea2-44fb-4eff-8e0e-fad2ee11faa9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "10e871df-d9ff-4005-8072-0e6db72a7e2f"
+          "height": 221
+        }
       },
       "cell_type": "code",
       "source": [
         "!kaggle competitions download -c dog-breed-identification"
       ],
-      "execution_count": 15,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "401 - Unauthorized\n"
+            "Downloading labels.csv.zip to /content\n",
+            "\r  0% 0.00/214k [00:00<?, ?B/s]\n",
+            "100% 214k/214k [00:00<00:00, 63.0MB/s]\n",
+            "Downloading sample_submission.csv.zip to /content\n",
+            "  0% 0.00/281k [00:00<?, ?B/s]\n",
+            "100% 281k/281k [00:00<00:00, 92.7MB/s]\n",
+            "Downloading test.zip to /content\n",
+            " 97% 335M/346M [00:04<00:00, 111MB/s]\n",
+            "100% 346M/346M [00:04<00:00, 77.5MB/s]\n",
+            "Downloading train.zip to /content\n",
+            "100% 343M/345M [00:03<00:00, 90.2MB/s]\n",
+            "100% 345M/345M [00:03<00:00, 92.3MB/s]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "7uCT-hxqX9NS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "data = pd.read_csv('/content/kaggle/train.csv', header=0, sep=',', quotechar='\"')\n",
+        "data.head()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "dS2sZff1ZfBz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        },
+        "outputId": "9b49f1ce-1c6d-46c6-bf47-115b3b31d4e6"
+      },
+      "cell_type": "code",
+      "source": [
+        "!ls -al"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "total 707572\n",
+            "drwxr-xr-x 1 root root      4096 Jan 24 05:39 .\n",
+            "drwxr-xr-x 1 root root      4096 Jan 24 05:37 ..\n",
+            "drwxr-xr-x 1 root root      4096 Jan  8 17:14 .config\n",
+            "-rw-r--r-- 1 root root        63 Jan 24 05:38 kaggle.json\n",
+            "-rw-r--r-- 1 root root    218954 Jan 24 05:39 labels.csv.zip\n",
+            "drwxr-xr-x 1 root root      4096 Jan  8 17:15 sample_data\n",
+            "-rw-r--r-- 1 root root    288160 Jan 24 05:39 sample_submission.csv.zip\n",
+            "-rw-r--r-- 1 root root 362738853 Jan 24 05:39 test.zip\n",
+            "-rw-r--r-- 1 root root 361279070 Jan 24 05:39 train.zip\n"
           ],
           "name": "stdout"
         }
@@ -217,7 +265,8 @@
       },
       "cell_type": "code",
       "source": [
-        ""
+        "# Zip file \n",
+        "data2 = pd.read_csv('kaggle/train_sample.csv.zip', compression='zip', header=0, sep=',', quotechar='\"')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -230,10 +279,90 @@
       },
       "cell_type": "code",
       "source": [
-        ""
+        "im_height = 224\n",
+        "im_weight = 224\n",
+        "im_size = (im_height, im_weight)\n",
+        "num_class = 16\n",
+        "\n",
+        "dir = '/content/'"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "D_0wQmkYX4s_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# Importing labels \n",
+        "labels = pd.read_csv('labels.csv.zip', compression='zip', header=0, sep=',', quotechar='\"')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "Z-t6ttXJYvwv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "from zipfile import ZipFile\n",
+        "zf = ZipFile('train.zip', 'r')\n",
+        "zf.extractall('')\n",
+        "zf.close()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "ttiN_EWRauBP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "a5d964f1-940b-4dd5-d3b7-8e23f3ab9f35"
+      },
+      "cell_type": "code",
+      "source": [
+        "!ls -al"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "total 708220\n",
+            "drwxr-xr-x 1 root root      4096 Jan 24 05:52 .\n",
+            "drwxr-xr-x 1 root root      4096 Jan 24 05:37 ..\n",
+            "drwxr-xr-x 1 root root      4096 Jan  8 17:14 .config\n",
+            "-rw-r--r-- 1 root root        63 Jan 24 05:38 kaggle.json\n",
+            "-rw-r--r-- 1 root root    218954 Jan 24 05:39 labels.csv.zip\n",
+            "drwxr-xr-x 1 root root      4096 Jan  8 17:15 sample_data\n",
+            "-rw-r--r-- 1 root root    288160 Jan 24 05:39 sample_submission.csv.zip\n",
+            "-rw-r--r-- 1 root root 362738853 Jan 24 05:39 test.zip\n",
+            "drwxr-xr-x 3 root root    663552 Jan 24 05:53 train\n",
+            "-rw-r--r-- 1 root root 361279070 Jan 24 05:39 train.zip\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Xv_DSZrQa3yG",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "!cd train"
+      ]
     }
   ]
 }
