--- a/98. cnn_breed.ipynb
+++ b/98. cnn_breed.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jjone36/Colab/blob/master/cnn_breed.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jjone36/Colab/blob/master/98.%20cnn_breed.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -102,7 +102,7 @@
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -147,7 +147,7 @@
       "source": [
         "ls -lha kaggle.json"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,8 +167,8 @@
       "cell_type": "code",
       "source": [
         "from getpass import getpass\n",
-        "user = 'jjone36'\n",
-        "key = 'cf8dcde20a60798fe4fb91b2ba5158e8'\n",
+        "user = ''\n",
+        "key = ''\n",
         "\n",
         "if '.kaggle' not in os.listdir('/root'):\n",
         "    !mkdir ~/.kaggle\n",
@@ -195,7 +195,7 @@
       "source": [
         "!kaggle competitions download -c dog-breed-identification"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -221,17 +221,17 @@
       "metadata": {
         "id": "vMeWRmure0Ik",
         "colab_type": "code",
+        "outputId": "c640f25b-91f0-4ca3-fc78-7153144f8429",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c640f25b-91f0-4ca3-fc78-7153144f8429"
+        }
       },
       "cell_type": "code",
       "source": [
         "pwd"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -307,17 +307,17 @@
       "metadata": {
         "id": "uGLQfifutFdN",
         "colab_type": "code",
+        "outputId": "3301f78b-7dc8-403d-cd16-d19f28e7c7c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 198
-        },
-        "outputId": "3301f78b-7dc8-403d-cd16-d19f28e7c7c6"
+        }
       },
       "cell_type": "code",
       "source": [
         "labels.head()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -409,17 +409,17 @@
       "metadata": {
         "id": "JsDiz11auNzX",
         "colab_type": "code",
+        "outputId": "cc387518-a6e7-4cca-b212-e794ff55acc4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 264
-        },
-        "outputId": "cc387518-a6e7-4cca-b212-e794ff55acc4"
+        }
       },
       "cell_type": "code",
       "source": [
         "label_oh.head()"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -649,18 +649,18 @@
       "metadata": {
         "id": "tEY_J-l2uNpW",
         "colab_type": "code",
+        "outputId": "510a4a77-38b0-4135-c1c6-e58fe7921797",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 138
-        },
-        "outputId": "510a4a77-38b0-4135-c1c6-e58fe7921797"
+        }
       },
       "cell_type": "code",
       "source": [
         "label_oh = np.asarray(label_oh)\n",
         "label_oh"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -701,11 +701,11 @@
       "metadata": {
         "id": "OE2HHvhLvzJu",
         "colab_type": "code",
+        "outputId": "9dd55b86-54ac-443e-bb56-dfa93d7f1e6f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "9dd55b86-54ac-443e-bb56-dfa93d7f1e6f"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -719,7 +719,7 @@
         "  y_train.append(label_oh[i])\n",
         "  i += 1         "
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -734,11 +734,11 @@
       "metadata": {
         "id": "BQrn7bzpulAp",
         "colab_type": "code",
+        "outputId": "20b7f99a-ff06-4782-918e-f73431c1a496",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "20b7f99a-ff06-4782-918e-f73431c1a496"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -746,7 +746,7 @@
         "y_train_raw = np.array(y_train, np.uint8)\n",
         "y_train_raw.max()"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -766,11 +766,11 @@
       "metadata": {
         "id": "DDCtcHgHzIIJ",
         "colab_type": "code",
+        "outputId": "a9253a2c-680c-49c1-f695-733022fe6892",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "a9253a2c-680c-49c1-f695-733022fe6892"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -778,7 +778,7 @@
         "X_train_raw = np.array(X_train, np.float32) / 255.\n",
         "X_train_raw.shape"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -808,17 +808,17 @@
       "metadata": {
         "id": "Xj3teUor0sOx",
         "colab_type": "code",
+        "outputId": "bea521fa-2f81-4019-cac0-349f8350bbda",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "bea521fa-2f81-4019-cac0-349f8350bbda"
+        }
       },
       "cell_type": "code",
       "source": [
         "y_train_raw.shape"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -875,18 +875,18 @@
       "metadata": {
         "id": "1bWZKigV2Mco",
         "colab_type": "code",
+        "outputId": "dbdb9f78-6dc6-489f-ca19-2d58d411e655",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "dbdb9f78-6dc6-489f-ca19-2d58d411e655"
+        }
       },
       "cell_type": "code",
       "source": [
         "import keras\n",
         "from keras.applications.vgg19 import VGG19"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -901,18 +901,18 @@
       "metadata": {
         "id": "_btYnlgP2hFn",
         "colab_type": "code",
+        "outputId": "04ef1900-bf81-4844-e932-cd90fedee448",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "04ef1900-bf81-4844-e932-cd90fedee448"
+        }
       },
       "cell_type": "code",
       "source": [
         "# VGG19 Application\n",
         "model = VGG19(weights = 'imagenet', include_top = False, input_shape = (im_height, im_weight, 3))"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -928,17 +928,17 @@
       "metadata": {
         "id": "9yzGMo1l2xRw",
         "colab_type": "code",
+        "outputId": "3c814188-a02e-4b53-dbf5-e6db18bc9fa4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "3c814188-a02e-4b53-dbf5-e6db18bc9fa4"
+        }
       },
       "cell_type": "code",
       "source": [
         "model.output"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1087,17 +1087,17 @@
       "metadata": {
         "id": "oRTBRXT15r6H",
         "colab_type": "code",
+        "outputId": "1dcb0ace-2ae1-4fee-fa89-51900c998752",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 968
-        },
-        "outputId": "1dcb0ace-2ae1-4fee-fa89-51900c998752"
+        }
       },
       "cell_type": "code",
       "source": [
         "myModel.summary()"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1166,18 +1166,18 @@
       "metadata": {
         "id": "iTbH19OZ6VfG",
         "colab_type": "code",
+        "outputId": "5c8aaaa9-cb5a-4bc1-a827-d864fac15363",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 244
-        },
-        "outputId": "5c8aaaa9-cb5a-4bc1-a827-d864fac15363"
+        }
       },
       "cell_type": "code",
       "source": [
         "# Fitting\n",
         "myModel.fit(X_train, y_train, epochs = 5, batch_size = 30, validation_data = (X_val, y_val), verbose = 1)"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1224,17 +1224,17 @@
       "metadata": {
         "id": "bIsGkfnI7WNt",
         "colab_type": "code",
+        "outputId": "088d14fb-8494-440d-d322-ae99075f0ca1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "088d14fb-8494-440d-d322-ae99075f0ca1"
+        }
       },
       "cell_type": "code",
       "source": [
         "myModel.evaluate(X_val, y_val)"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
