--- a/96_cnn_Doodle.ipynb
+++ b/96_cnn_Doodle.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "96_cnn_Doodle.ipynb",
+      "name": "Doodle.ipynb",
       "version": "0.3.2",
       "provenance": [],
       "toc_visible": true,
@@ -105,7 +105,6 @@
       },
       "cell_type": "markdown",
       "source": [
-        "<a></a>\n",
         "# 1. Load data"
       ]
     },
@@ -344,9 +343,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "<a>\n",
-        "# 2. Let's draw doodle\n",
-        "</a>"
+        "# 2. Let's draw doodle"
       ]
     },
     {
