--- a/94_cnn_NeuralStyler.ipynb
+++ b/94_cnn_NeuralStyler.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "94_cnn_NeuralS.ipynb",
+      "name": "94_cnn_NeuralStyler.ipynb",
       "version": "0.3.2",
       "provenance": [],
       "toc_visible": true,
@@ -50,8 +50,6 @@
       },
       "cell_type": "code",
       "source": [
-        "from skimage.transform import resize\n",
-        "\n",
         "import tensorflow as tf\n",
         "from keras.applications import vgg19\n",
         "\n",
@@ -156,7 +154,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 367
         },
-        "outputId": "77573c22-2f2d-460e-89e2-2baa31d86bec"
+        "outputId": "4e1859ba-d149-42f2-f7e9-7658fe2c0aac"
       },
       "cell_type": "code",
       "source": [
@@ -164,7 +162,7 @@
         "plt.imshow(img_1)\n",
         "plt.axis('off')"
       ],
-      "execution_count": 4,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,7 +174,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 37
         },
         {
           "output_type": "display_data",
@@ -200,7 +198,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 367
         },
-        "outputId": "0d96490c-4609-453f-f248-05ba19de2704"
+        "outputId": "688c16a7-bf24-44d4-c151-5941a5860298"
       },
       "cell_type": "code",
       "source": [
@@ -208,7 +206,7 @@
         "plt.imshow(img_2)\n",
         "plt.axis('off')"
       ],
-      "execution_count": 5,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -220,7 +218,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 38
         },
         {
           "output_type": "display_data",
@@ -246,8 +244,22 @@
       "source": [
         "im_size = 512\n",
         "\n",
-        "content = '/content/nice.jpg'\n",
-        "style = '/content/style.jpg'"
+        "content_path = '/content/nice.jpg'\n",
+        "style_path = '/content/style.jpg'"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "-vejTuz-oxlH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "from PIL import Image\n",
+        "from tensorflow.python.keras.preprocessing import image as kp_image"
       ],
       "execution_count": 0,
       "outputs": []
@@ -260,12 +272,20 @@
       },
       "cell_type": "code",
       "source": [
-        "# def load_process(path):\n",
-        "  img = plt.imread(path)\n",
+        "def load_process(path):\n",
         "  \n",
-        "  img = resize(img, (im_size, im_size, 3))\n",
+        "  max_dim = 512\n",
+        "  img = Image.open(path)\n",
+        "  \n",
+        "  long = max(img.size)\n",
+        "  scale = max_dim/long\n",
+        "  img = img.resize((round(img.size[0]*scale), round(img.size[1]*scale)), Image.ANTIALIAS)\n",
+        "  \n",
+        "  img = kp_image.img_to_array(img)\n",
+        "  \n",
+        "  img = np.expand_dims(img, axis=0)\n",
         "  img = vgg19.preprocess_input(img)\n",
-        "  \n",
+        "\n",
         "  return img"
       ],
       "execution_count": 0,
@@ -291,7 +311,9 @@
         "  img_array[:, :, :, 2] -= 123.68\n",
         "  img_array = img_array[:, :, :, ::-1]\n",
         "  \n",
-        "  return img_array"
+        "  img = vgg19.preprocess_input(img_array)\n",
+        "  \n",
+        "  return img"
       ],
       "execution_count": 0,
       "outputs": []
@@ -304,14 +326,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 70
         },
-        "outputId": "f003f578-e50e-4f22-ef2e-01f4e1a18b21"
+        "outputId": "94c5567c-db04-4629-c32e-20f443ff349c"
       },
       "cell_type": "code",
       "source": [
-        "content_img = load_process(content)\n",
-        "style_img = load_process(style)"
+        "content_img = load_process(content_path)\n",
+        "style_img = load_process(style_path)"
       ],
-      "execution_count": 32,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,28 +382,15 @@
       "metadata": {
         "id": "ztCMSKVkLA75",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 70
-        },
-        "outputId": "946a04a3-8981-489f-ec1b-574908e384b5"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "vgg = vgg19.VGG19(include_top=False, weights='imagenet')\n",
         "vgg.trainable = False"
       ],
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.1/vgg19_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-            "80142336/80134624 [==============================] - 1s 0us/step\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -537,14 +546,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 100
         },
-        "outputId": "3a7d60dc-d0bb-405c-e2d1-f8e1093332e6"
+        "outputId": "32d65fd4-1abc-41d5-f9ad-47ced74c735b"
       },
       "cell_type": "code",
       "source": [
         "style_outputs = [layers_dic[i] for i in style_layers]\n",
         "style_outputs"
       ],
-      "execution_count": 22,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -560,7 +569,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 46
         }
       ]
     },
@@ -587,12 +596,11 @@
         "  vgg = vgg19.VGG19(include_top=False, weights='imagenet')\n",
         "  vgg.trainable = False\n",
         "  \n",
-        "  style_outputs = [layers_dic[i] for i in style_layers]\n",
-        "  content_outputs = [layers_dic[i] for i in content_layers]\n",
-        "  \n",
+        "  style_outputs = [vgg.get_layer(name).output for name in style_layers]\n",
+        "  content_outputs = [vgg.get_layer(name).output for name in content_layers]\n",
         "  model_outputs = style_outputs + content_outputs\n",
         "  \n",
-        "  model = Model(model.input, model_outputs)\n",
+        "  model = Model(vgg.input, model_outputs)\n",
         "  \n",
         "  return model"
       ],
@@ -816,7 +824,7 @@
         "\n",
         "    model = get_model()\n",
         "    for layer in model.layers:\n",
-        "        layer.trainable = false\n",
+        "        layer.trainable = False\n",
         "\n",
         "    content_features, style_features = get_feature(model, content_img, style_img)\n",
         "\n",
@@ -867,16 +875,52 @@
       "source": [
         "im_size = 512\n",
         "\n",
-        "content = '/content/nice.jpg'\n",
-        "style = '/content/style.jpg'\n",
+        "content_path = '/content/nice.jpg'\n",
+        "style_path = '/content/style.jpg'\n",
         "\n",
-        "content_img = load_process(content)\n",
-        "style_img = load_process(style)\n",
-        "\n",
-        "best_img = neural_styler(content_img, style_img)"
+        "content_img = load_process(content_path)\n",
+        "style_img = load_process(style_path)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "QG1q280ykew0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1704
+        },
+        "outputId": "4a8421aa-3e79-466c-9c89-6b0401108e7b"
+      },
+      "cell_type": "code",
+      "source": [
+        "best_img = neural_styler(content_img, style_img)"
+      ],
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/engine/base_layer.py\u001b[0m in \u001b[0;36massert_input_compatibility\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m    278\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 279\u001b[0;31m                 \u001b[0mK\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_keras_tensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    280\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py\u001b[0m in \u001b[0;36mis_keras_tensor\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m    473\u001b[0m         raise ValueError('Unexpectedly found an instance of type `' +\n\u001b[0;32m--> 474\u001b[0;31m                          \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'`. '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    475\u001b[0m                          'Expected a symbolic tensor instance.')\n",
+            "\u001b[0;31mValueError\u001b[0m: Unexpectedly found an instance of type `<class 'numpy.ndarray'>`. Expected a symbolic tensor instance.",
+            "\nDuring handling of the above exception, another exception occurred:\n",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-97-7abfb9d48847>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbest_img\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mneural_styler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontent_img\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstyle_img\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-95-41b5974df0fe>\u001b[0m in \u001b[0;36mneural_styler\u001b[0;34m(content_img, style_img, num_iter, content_weight, style_wieght)\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mlayer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrainable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mcontent_features\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstyle_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_feature\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcontent_img\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstyle_img\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0minit_image\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontent_img\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-94-b44cefdd675d>\u001b[0m in \u001b[0;36mget_feature\u001b[0;34m(model, content_img, style_img)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_feature\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcontent_img\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstyle_img\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m   \u001b[0mcontent_outputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontent_img\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m   \u001b[0mstyle_outputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstyle_img\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/engine/base_layer.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, inputs, **kwargs)\u001b[0m\n\u001b[1;32m    438\u001b[0m             \u001b[0;31m# Raise exceptions in case the input is not compatible\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    439\u001b[0m             \u001b[0;31m# with the input_spec set at build time.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 440\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0massert_input_compatibility\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    441\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    442\u001b[0m             \u001b[0;31m# Handle mask propagation.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/engine/base_layer.py\u001b[0m in \u001b[0;36massert_input_compatibility\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m    283\u001b[0m                                  \u001b[0;34m'Received type: '\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    284\u001b[0m                                  \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'. Full input: '\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 285\u001b[0;31m                                  \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'. All inputs to the layer '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    286\u001b[0m                                  'should be tensors.')\n\u001b[1;32m    287\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: Layer model_12 was called with an input that isn't a symbolic tensor. Received type: <class 'numpy.ndarray'>. Full input: [array([[[[ 45.060997 , -30.779    , -81.68     ],\n         [ 47.060997 , -29.779    , -77.68     ],\n         [ 50.060997 , -27.779    , -72.68     ],\n         ...,\n         [123.061    ,  99.221    ,  98.32     ],\n         [129.061    , 100.221    ,  96.32     ],\n         [133.061    , 100.221    ,  95.32     ]],\n\n        [[ 50.060997 , -25.779    , -75.68     ],\n         [ 50.060997 , -26.779    , -73.68     ],\n         [ 52.060997 , -25.779    , -70.68     ],\n         ...,\n         [139.061    , 121.221    , 118.32     ],\n         [126.061    , 105.221    ,  99.32     ],\n         [123.061    , 100.221    ,  93.32     ]],\n\n        [[ 51.060997 , -25.779    , -72.68     ],\n         [ 50.060997 , -26.779    , -72.68     ],\n         [ 50.060997 , -27.779    , -71.68     ],\n         ...,\n         [151.061    , 138.22101  , 131.32     ],\n         [143.061    , 130.22101  , 122.32     ],\n         [121.061    , 108.221    , 100.32     ]],\n\n        ...,\n\n        [[-80.939    , -81.779    , -73.68     ],\n         [-78.939    , -78.779    , -70.68     ],\n         [-61.939003 , -61.779    , -51.68     ],\n         ...,\n         [-53.939003 , -67.779    , -74.68     ],\n         [-59.939003 , -73.779    , -80.68     ],\n         [-58.939003 , -72.779    , -79.68     ]],\n\n        [[-47.939003 , -41.779    , -22.68     ],\n         [-47.939003 , -40.779    , -23.68     ],\n         [-54.939003 , -46.779    , -28.68     ],\n         ...,\n         [-54.939003 , -67.779    , -72.68     ],\n         [-54.939003 , -68.779    , -72.68     ],\n         [-61.939003 , -75.779    , -79.68     ]],\n\n        [[-47.939003 , -35.779    , -11.68     ],\n         [-36.939003 , -24.779    ,  -0.6800003],\n         [-44.939003 , -32.779    ,  -9.68     ],\n         ...,\n         [-53.939003 , -67.779    , -70.68     ],\n         [-59.939003 , -73.779    , -76.68     ],\n         [-63.939003 , -77.779    , -80.68     ]]]], dtype=float32)]. All inputs to the layer should be tensors."
+          ]
+        }
+      ]
     },
     {
       "metadata": {
